# B3Pred

./: .gitignore  MANIFEST.in  README.md  __init__.py  bazichni rezultati.xlsx  experiments.py  pyproject.toml  requirements.txt  setup.py  test.py  verify_setup.py
b3pred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: __init__.py  base_config.py  configs__init__.py  graph_configs.py  model_configs.py  predictor_config.py
configs/experiment_configs/: gat_baseline.json  gcn_baseline.json  gin_baseline.json  sage_baseline.json
data/: b3db_tanimoto_test.csv  b3db_tanimoto_train.csv  b3db_tanimoto_val.csv  b3pp.csv  cleaned_admetsar_bbb.csv  cleaned_molnet_bbb.csv
experiments/debug_run/: model.pth
experiments/gat_baseline/: model.pth
experiments/gat_test1/: config.json
experiments/gcn_baseline/: model.pth
experiments/gcn_deep/: model.pth
experiments/gin_baseline/: model.pth
experiments/sage_baseline/: model.pth
graph/: featurizer.py  graph__init__.py
model/: gat.py  gcn.py  gin.py  gine.py  graph_stack.py  graphsage.py  model__init__.py  predictor.py
non-graph/: logistic.py  randomforest.py  svm.py
optimization_results/bayesian/: GAT_bayesian_20260209_201428_detailed.json  GAT_bayesian_20260209_201428_study.pkl  GAT_bayesian_20260209_201428_summary.txt  (+12 more)
optimizations/: OPTIMIZATION_README.md  abc_optimization.py  bayesian_optimization.py  cmaes_optimization.py  genetic_optimization.py  hillclimbing_optimization.py  hyperband_optimization.py  optimizations__init__.py  pso_optimization.py  requirements_optimization.txt  run_all_optimizations.py
scripts/: evaluate.py  experiments.py  run_baselines.py  scripts__init__.py  train.py
src/: __init__.py
(+137 files in other folders)
